--- a/notebooks/WS_jupyter.ipynb
+++ b/notebooks/WS_jupyter.ipynb
@@ -38,17 +38,18 @@
    "source": [
     "# 3. Edit the main part of the script \n",
     "\n",
-    "WS.resultdir = '../Results'\n",
+    "WS.resultdir = '../Results'    # directory in which the plots get stored  \n",
+    "WS.tits      = ''              # additional flag to appear in all output file names\n",
     "\n",
-    "WS.h5file_long  = '../Data/WS2003-23_long.h5'\n",
+    "WS.h5file_long  = '../Data/WS2003-23_long.h5'   # outcome of create_files.py\n",
     "# from: https://ftp.cpc.ncep.noaa.gov/cwlinks/norm.daily.nao.cdas.z500.19500101_current.csv\n",
-    "WS.naoi_file = '../Data/norm.daily.nao.cdas.z500.19500101_current.csv'\n",
+    "WS.naoi_file = '../Data/norm.daily.nao.cdas.z500.19500101_current.csv'  # optionally, the NAOI for correlation studies\n",
     "WS.not_file = '../Data/NOT_2003_2023.h5'    # optionally, if NOT data existing and needed \n",
     "\n",
     "WS.is_naoi = False  # set to True if naoi_file is available\n",
     "WS.is_NOT  = False  # set to True if not_file is available\n",
     "\n",
-    "# Names of variables provided by WS\n",
+    "# Names of variables provided by the weather station\n",
     "WS.name_temperature = 'temperature'\n",
     "WS.name_humidity    = 'humidity'\n",
     "WS.name_pressure    = 'pressure'\n",
